# practical-cbc-malleability

./: .gitignore  README.md  analyze_packet_structure.py  demo_etm.py  pyproject.toml  test_tampered.py
attacks/: bitflip_amount.py  tamper.py
core/: etm.py  hmac_sha256.py  utils.py
scripts/: analyze_blocks.py  debug_compare.py  debug_decrypt_blocks.py  demo_cbc_attack.py  demo_etm.py  tamper_etm_packet.py
src/cbc_malleability/core/: cbc.py  etm.py
tests/: test_etm_tampered.py
