[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbc-malleability"
version = "0.1.0"
description = "Practical CBC malleability attack and Encrypt-then-MAC mitigation"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]